
4.1.2 - ie refresh in progress

* make_test_dir.pl updated. now sets mimetypes for music files (allows testing of mp3 tags)

* rc_menu
  delete can now delete a directory - shows dir contents in dialog

* config
  slowly moving all config to a hash which is stored as a tsv
  all configurable options shifted to TSV $HOME/.namefix.pl/config_hash.tsv

* filter regex
  now users quotemeta
  swapped to clear flag named $FILTER_REGEX

* fn_sp_word now uses quotemeta
* $fn_sp flag renamed to $WORD_SPECIAL_CASING
* more tidy ups
* fn_sp_word works again

* fixed up namefix-cli.pl - works with updated libs. bugs may still occur

* all libraries updated to proper library format
  need to untangle global_variables.pm still.
  namefix-cli.pl is likely broken currently. been focusing on gui tidyup mainly.

* bookmarks.pm no longer uses self generating code.
  hacked some checkbutton to make it work

* mass libraries updated to proper libs

4.1.1 - ie refresh in progress

* about.pm is a proper lib now

* .msi & .exe's updated

* nsis installer script updated so it doesnt include .git

* Hot Keys Added:
  ESC = Stop doing whatever your doing
  F2  = Manual Rename
  F5  = Refresh current dir listing
  F6  = Preview current changes (if any)

* progress bar updates on recurisve listings

* make_test_dir.pl updated - creates fake music files in fake album directories
* added cool progress bar.
* code cleanups

* updating NSIS - probally quite broken on stuff like:
  ENV path,
  registry entry to ad namefix.pl to right click.

* adding right click Apply Preview to hlist
* update about dialog to refer to github: https://github.com/jacob-jarick/namefix
* created make_test_dir.pl for generating files I can test with.
* removed all references to $prog_dir, now using Findbin
* turned on strict and warnings for namefix.pl - redirected warnings for Jcombox
  created all missing main vars with our (not my), should have turned on strict ages ago.