@@ -156,7 +156,7 @@ $mw -> title("namefix.pl $main::version by $main::author");
 
 $mw->bind('<KeyPress>' => sub
 {
-    print 'Keysym=', $Tk::event->K, ', numeric=', $Tk::event->N, "\n";
+#     print 'Keysym=', $Tk::event->K, ', numeric=', $Tk::event->N, "\n";
 
     if($Tk::event->K eq 'F2')
     {
@@ -164,7 +164,7 @@ $mw->bind('<KeyPress>' => sub
 	if(defined $main::hlist_file && defined $main::hlist_cwd)
 	{
 		print "Manual Rename '$main::hlist_file' \n";
-		&main::manual_edit($main::hlist_file, $main::hlist_cwd);
+		&manual::edit($main::hlist_file, $main::hlist_cwd);
 	}
     }
     if($Tk::event->K eq 'F5')
